--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ title:            Paul McAvoy
 tagline:          'Homepage'
 description:      'Blog by Paul McAvoy, Built with the Hyde Jekyll Theme by <a href="https://twitter.com/mdo">@mdo</a>.'
 baseurl:          /
+aboutPage:        /about.html
 
 author:
   name:           'Paul McAvoy'
